Improve access rule to deny files starting with "config".

--- a/App/Site/.htaccess.dist
+++ b/App/Site/.htaccess.dist
@@ -1,4 +1,4 @@
-<Files ~ "^(\..+|config.+|Makefile)$">
+<Files ~ "^(\..+|config\.+|Makefile)$">
     Deny From All
 </Files>
 <Files ~ "(\.inc|\.dist|~)$">
